添加日志配置和Responses API兼容端点，支持时区设置和OpenAI Responses格式转换

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ REDIS_URL=redis://redis:6379/0
 # API authentication token for gateway clients (plain text, will be base64-encoded in headers)
 APIPROXY_AUTH_TOKEN=timeline
 
+# Logging configuration
+LOG_LEVEL=INFO
+# Uncomment to force a specific timezone for log timestamps (e.g., Asia/Shanghai)
+# LOG_TIMEZONE=Asia/Shanghai
+
 ############################
 # Multi-provider routing  ##
 ############################
