--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   redis:
     image: redis:7-alpine
@@ -9,9 +7,12 @@ services:
       - "6379:6379"
     volumes:
       - redis-data:/data
+    networks:
+      apiproxy-net:
+        ipv4_address: 172.20.0.10
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
+      interval: 10s
       timeout: 3s
       retries: 5
 
@@ -24,17 +25,29 @@ services:
     restart: unless-stopped
     env_file:
       - .env
+    volumes:
+      - ./logs:/app/logs
     depends_on:
       redis:
         condition: service_healthy
     ports:
       - "8000:8000"
+    networks:
+      apiproxy-net:
+        ipv4_address: 172.20.0.11
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 10s
+      interval: 1h
       timeout: 5s
       retries: 5
       start_period: 10s
 
 volumes:
   redis-data:
+
+networks:
+  apiproxy-net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/24
