增强Redis安全配置，添加密码保护和访问限制

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Redis configuration
 # For docker-compose: redis://redis:6379/0
 # For local development: redis://localhost:6379/0
-REDIS_URL=redis://redis:6379/0
+REDIS_PASSWORD=timeline-redis-2025
+REDIS_URL=redis://:timeline-redis-2025@redis:6379/0
 
 # API authentication token for gateway clients (plain text, will be base64-encoded in headers)
 APIPROXY_AUTH_TOKEN=timeline
