--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,17 @@ services:
     container_name: apiproxy-redis
     restart: unless-stopped
     ports:
-      - "6379:6379"
+      - "127.0.0.1:6379:6379"
     volumes:
       - redis-data:/data
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD:?REDIS_PASSWORD not set}
+    command:
+      - sh
+      - -c
+      - |
+        redis-server /usr/local/etc/redis/redis.conf --requirepass "$${REDIS_PASSWORD}"
     networks:
       apiproxy-net:
         ipv4_address: 172.20.0.10
