添加Claude官方SDK支持，实现密钥加密存储和优选调度策略

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ REDIS_URL=redis://:timeline-redis-2025@172.20.0.10:6379/0
 # API authentication token for gateway clients (plain text, will be base64-encoded in headers)
 APIPROXY_AUTH_TOKEN=timeline
 
+# Secret key for encrypting sensitive fields (e.g.,存储到 Redis 前的加密密钥)
+# 可使用 scripts/generate_secret_key.sh 快速生成
+SECRET_KEY=please-change-me
+
 # Logging configuration
 LOG_LEVEL=INFO
 # Uncomment to force a specific timezone for log timestamps (e.g., Asia/Shanghai)
@@ -78,6 +82,12 @@ LLM_PROVIDER_google_TRANSPORT=sdk
 LLM_PROVIDER_google_API_KEY=your-gemini-api-key
 # 可选：如果不想调用 SDK 的 list()，可用静态模型列表
 # LLM_PROVIDER_google_STATIC_MODELS_JSON=["gemini-2.5-flash","gemini-1.5-pro"]
+
+# Claude/Anthropic 官方 SDK 直连示例（TRANSPORT=sdk 时不会拼接 /v1/...）
+LLM_PROVIDER_claude_NAME=Claude
+LLM_PROVIDER_claude_BASE_URL=https://api.anthropic.com
+LLM_PROVIDER_claude_TRANSPORT=sdk
+LLM_PROVIDER_claude_API_KEY=your-claude-api-key
 
 # 静态模型列表配置（适用于没有/models接口的中转服务）
 # 当某些中转服务或自定义服务没有提供 /models 接口时，可以使用静态配置声明模型列表
