--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "pytest>=9.0.1",
     "pytest-asyncio>=0.23.0", # Added for async tests
     "google-genai>=1.52.0",
+    "openai>=2.8.1",
+    "anthropic>=0.75.0",
+    "django>=5.2.8",
 ]
 
 [project.scripts]
