添加PostgreSQL数据库支持，配置Docker Compose部署和SQLAlchemy依赖

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
 # Redis configuration
 # For docker-compose: redis://redis:6379/0
 # For local development: redis://localhost:6379/0
-REDIS_PASSWORD=timeline-redis-2025
-REDIS_URL=redis://:timeline-redis-2025@172.20.0.10:6379/0
+REDIS_PASSWORD=change-me-redis  # pragma: allowlist secret
+REDIS_URL=redis://:${REDIS_PASSWORD}@172.20.0.10:16379/0  # pragma: allowlist secret
+
+# PostgreSQL 配置
+# docker-compose: postgresql+psycopg://apiproxy:change-me-postgres@172.20.0.12:15432/apiproxy  # pragma: allowlist secret
+# local: postgresql+psycopg://apiproxy:change-me-postgres@localhost:15432/apiproxy  # pragma: allowlist secret
+POSTGRES_USER=apiproxy
+POSTGRES_PASSWORD=change-me-postgres  # pragma: allowlist secret
+POSTGRES_DB=apiproxy
+POSTGRES_HOST=172.20.0.12
+DATABASE_URL=postgresql+psycopg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:15432/${POSTGRES_DB}  # pragma: allowlist secret
 
 # API authentication token for gateway clients (plain text, will be base64-encoded in headers)
 APIPROXY_AUTH_TOKEN=timeline
