--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "cryptography>=43.0.0",
     "ruff>=0.14.7",
     "pydantic[email]>=2.12.5",
+    "python-jose[cryptography]>=3.3.0", # For JWT handling
+    "passlib[bcrypt]>=1.7.4", # For password hashing
 ]
 
 [project.scripts]
