新增角色权限系统与提供商预设配置，优化用户注册流程

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # ============================================
 .pytest_cache/
 .ruff_cache/
+.venv/
 __pycache__/
 backend/__pycache__
 backend/*.py[oc]
