--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,50 @@ services:
     # 开发模式:启用热重载
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
 
+  celery_worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    image: apiproxy-api:latest
+    container_name: apiproxy-celery-worker
+    restart: unless-stopped
+    env_file:
+      - backend/.env
+    volumes:
+      - ./backend/logs:/app/logs
+      - ./backend/app:/app/app:ro
+      - ./backend/main.py:/app/main.py:ro
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      apiproxy-net:
+        ipv4_address: 172.20.0.14
+    command: celery -A app.celery_app.celery_app worker -l info
+
+  celery_beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    image: apiproxy-api:latest
+    container_name: apiproxy-celery-beat
+    restart: unless-stopped
+    env_file:
+      - backend/.env
+    volumes:
+      - ./backend/logs:/app/logs
+      - ./backend/app:/app/app:ro
+      - ./backend/main.py:/app/main.py:ro
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      apiproxy-net:
+        ipv4_address: 172.20.0.15
+    command: celery -A app.celery_app.celery_app beat -l info
+
   # 前端服务(开发环境,可选)
   frontend:
     build:
