feat: 将无用文件添加到 .gitignore - celerybeat 调度文件、临时数据库、Python 版本文件

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,18 @@ backend/.env
 # Root environment (for Docker Compose)
 .env
 
+# Celery Beat scheduler database
+backend/celerybeat-schedule
+backend/celerybeat-schedule-shm
+backend/celerybeat-schedule-wal
+
+# Temporary database files
+backend/tmp.db
+backend/*.db
+
+# Python version files
+backend/.python-version
+
 # ============================================
 # Node.js (Frontend)
 # ============================================
