fix(workflow): 移除私有仓库检查条件并修复 docker compose 命令
移除了 deploy job 中对 github.repository.private 的判断条件，该条件导致
部署流程无法正常触发。同时修复了 docker compose 命令缺少 --env-file 参数
的问题，确保环境变量能够正确加载。更新后的命令现在可以正确拉取并启动所有
相关服务容器。

--- a/.github/workflows/docker.deploy.yml
+++ b/.github/workflows/docker.deploy.yml
@@ -18,7 +18,6 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: github.event.repository.private == true
 
     steps:
       - name: Checkout (for completeness)
@@ -46,5 +45,5 @@ jobs:
             # 需提前在服务器放好 docker-compose.yml/.env，并将 api/celery_* 指向远程镜像
             docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}"
             docker pull "$IMAGE"
-            docker compose pull api celery_worker celery_beat
-            docker compose up -d api celery_worker celery_beat
+            docker compose --env-file .env pull api celery_worker celery_beat
+            docker compose --env-file .env up -d api celery_worker celery_beat
