``` feat(env): 添加自动执行数据库迁移配置项
在 .env.example 文件中新增 AUTO_APPLY_DB_MIGRATIONS 配置项，用于控制是否自动应用数据库迁移。
生产环境建议保持为 true，以避免首次部署时遗漏迁移操作。

同时更新 docker-compose.yml 中的 env_file 路径，从 backend/.env 改为 backend/.env.local，
以便更好地支持本地开发环境配置隔离。

另外，新增 Alembic 迁移脚本，将 alembic_version 表中的 version_num 字段长度从默认 32 扩展至 128，
以兼容更长的版本号字符串。
```

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ REDIS_URL=redis://:timeline-redis-2025@localhost:16379/0
 # Celery 配置 (使用相同的 Redis 实例)
 CELERY_BROKER_URL=redis://:timeline-redis-2025@localhost:16379/2
 CELERY_RESULT_BACKEND=redis://:timeline-redis-2025@localhost:16379/2
+
+# 自动执行数据库迁移（生产环境建议保持为 true，避免首次部署遗漏）
+AUTO_APPLY_DB_MIGRATIONS=true
