``` feat(admin): 实现上游代理管理后台功能
新增基于数据库的上游代理配置管理功能，包括代理来源、代理节点的增删改查接口，
支持静态列表和远程文本列表两种来源类型，并提供健康检查与定时刷新机制。
同时更新了相关环境变量配置项及 Docker 入口脚本逻辑。

主要变更：
- 添加 `upstream_proxy_config`, `upstream_proxy_sources`, `upstream_proxy_endpoints` 数据表结构
- 提供完整的 Admin API 接口用于管理代理配置
- 引入 Celery 任务处理代理源刷新与健康检测
- 支持将代理配置同步至 Redis 运行时池
- 更新 `.env.example` 和 `Dockerfile` 相关配置
```

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,13 @@
 # 运行环境与日志
 APP_ENV=development
 LOG_LEVEL=INFO
+# LOG_TIMEZONE=Asia/Shanghai
+# 日志输出目录（相对路径以项目根目录为基准）
+LOG_DIR=logs
+# 保留最近 N 天的日志目录；0 表示不清理
+LOG_BACKUP_DAYS=7
+# 是否按业务拆分日志文件（拆分后目录结构示例：logs/2025-12-12/chat.log）
+LOG_SPLIT_BY_BUSINESS=true
 
 # CORS 配置（多个来源用英文逗号分隔）
 # 前端在容器外访问时通常为 http(s)://你的域名 或 http://你的IP:3000
@@ -69,12 +76,18 @@ LINUXDO_CLIENT_SECRET=
 # 回调地址必须是你实际可访问的域名（不要使用本机回环地址），例如：https://ai.example.com/callback
 LINUXDO_REDIRECT_URI=https://your-domain.com/callback
 
-# 上游请求代理池（可选，用于轮换出口 IP，降低单一 IP 被上游风控/封禁风险）
-# 多个代理 URL 用英文逗号或换行分隔；为空表示直连。
-# 支持 http(s):// 与 socks5(h)://，例如：
-# UPSTREAM_PROXY_POOL=http://user:pass@1.2.3.4:8080, socks5://5.6.7.8:1080
-# 选择策略：random（默认，随机挑选） / round_robin（轮询）
-UPSTREAM_PROXY_POOL=
-UPSTREAM_PROXY_STRATEGY=random
-# 同一次上游请求内，代理连接失败时的换代理重试次数（0 表示不重试）
+# 上游请求代理池
+# 已改为“后台管理式代理池”（DB 配置 + Celery 测活 + Redis 可用集合），不再通过环境变量配置代理列表。
+# 仍可通过环境变量控制“同一次上游请求内，代理连接失败时的换代理重试次数”（0 表示不重试）。
 UPSTREAM_PROXY_MAX_RETRIES=1
+
+# Next.js 环境变量示例
+
+# API 地址
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+
+# 分析开关
+ANALYZE=false
+
+# 类型检查开关
+SKIP_TYPE_CHECK=false
