feat(provider): 将 API 路径字段设为可空并优化前端表单配置
- 数据库层面：通过 Alembic 迁移脚本将 `providers` 和 `provider_presets` 表中的
  `models_path` 与 `chat_completions_path` 字段修改为可空（nullable），移除默认值约束
- 后端模型层：更新 SQLAlchemy 模型及 Pydantic Schema，使相关路径字段支持 None 值
- 配置逻辑调整：构建 Provider 配置时不再自动填充默认路径，保留数据库实际值
- 接口校验增强：
  - 在创建和更新接口中添加对 API 路径的格式校验和规范化处理
  - 强制要求至少填写一个核心 API 路径（messages/chat_completions/responses）
- 前端表单国际化：
  - 使用 i18n 替换硬编码文本，提升多语言支持能力
  - 更新高级配置区域结构，明确区分“API 路径”、“路由配置”和“成本配置”
  - 添加帮助提示和占位符内容，改善用户体验
- 删除冗余代码：
  - 移除了 `.env.example` 中关于数据库迁移的旧环境变量配置
  - 清理了前端页面组件中未使用的 props 和方法引用

--- a/.env.example
+++ b/.env.example
@@ -57,12 +57,7 @@ REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
 CELERY_BROKER_URL=${REDIS_URL}
 CELERY_RESULT_BACKEND=${REDIS_URL}
 
-# 自动执行数据库迁移（建议保持 true，避免首次启动遗漏）
-AUTO_APPLY_DB_MIGRATIONS=true
-# 是否在启动时真正执行迁移（需与 AUTO_APPLY_DB_MIGRATIONS=true 同时开启）
-ENABLE_AUTO_MIGRATION=false
-
-# 安全中间件开关：true 强制开启，false 强制关闭；默认仅在 APP_ENV=production 时启用
+# 安全中间件开关：true 强制开启，false 强制关闭 先不要开启 有问题
 ENABLE_SECURITY_MIDDLEWARE=false
 
 # 应用密钥（用于 JWT/HMAC/加密等敏感标识）
