--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "AI HIGRESS GATEWAY",
-  "short_name": "AI HIGRESS GATEWAY",
+  "short_name": "AI HIGRESS",
   "description": "AI Higress API Gateway - 智能 AI 路由网关管理系统",
   "start_url": "/",
   "scope": "/",
@@ -11,17 +11,30 @@
       "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/web-app-manifest-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/web-app-manifest-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "theme_color": "#0066cc",
   "background_color": "#ffffff",
   "categories": ["productivity", "business"],
-  "lang": "zh-CN"
+  "lang": "zh-CN",
+  "prefer_related_applications": false
 }
