``` feat(provider): 新增 Claude CLI 传输类型支持
- 为 `providers` 表的 `transport` 字段添加 `'claude_cli'` 类型，并更新相关 CHECK 约束
- 在 `.env.example` 中新增 `ENABLE_PROVIDER_HEALTH_CHECK` 配置项，用于控制是否启用 Provider 健康检查与路由过滤
- 扩展 `/metrics` 和 `/routing` 相关接口的 `transport` 枚举值，支持查询和统计 claude_cli 类型
- 实现完整的 Claude CLI 请求转发逻辑，包括请求格式转换、TLS 指纹伪装（基于 curl-cffi）、响应转 OpenAI 格式等
- 引入 `CurlCffiClient` 替代 httpx，以支持浏览器指纹伪装，提升反检测能力
- 更新健康检查开关控制逻辑，在路由选择时考虑健康状态
- 优化开发模式下的 Claude 请求日志记录，便于调试
```

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,10 @@ LINUXDO_CLIENT_SECRET=
 # 回调地址必须是你实际可访问的域名（不要使用本机回环地址），例如：https://ai.example.com/callback
 LINUXDO_REDIRECT_URI=https://your-domain.com/callback
 
+# Provider 健康检查与路由过滤
+# 是否启用 Provider 健康状态检查和路由过滤（关闭后将忽略 Provider 状态和最低分数过滤）
+ENABLE_PROVIDER_HEALTH_CHECK=true
+
 # 上游请求代理池
 # 已改为“后台管理式代理池”（DB 配置 + Celery 测活 + Redis 可用集合），不再通过环境变量配置代理列表。
 # 仍可通过环境变量控制“同一次上游请求内，代理连接失败时的换代理重试次数”（0 表示不重试）。
