feat(chat): 限制会话上下文中的历史消息数量
新增 `CHAT_CONTEXT_MAX_MESSAGES` 环境变量，用于控制在构建聊天上下文时最多携带的历史消息条数。默认值为 50，设为 0 表示不限制。此功能避免了上下文过长导致的性能问题，并优化了与上游模型的交互。

同时更新了相关测试用例以验证该逻辑的正确性。

fix(bridge): 增加 Agent 鉴权 Token 支持

为 Bridge Gateway 新增基于 JWT 的 Agent 鉴权机制。当启动参数 `--agent-token-secret` 被设置时，Agent 必须通过 AUTH 类型 WebSocket 消息提供有效 Token 才能完成注册。

配套新增 `/v1/bridge/agent-token` 接口供前端生成临时 Token，提升安全性并简化部署流程。

chore(config): 更新 .env.example 和 .gitignore

添加 `CHAT_CONTEXT_MAX_MESSAGES` 示例配置项；
将 `security/` 和 `.kiro/` 目录加入忽略列表，防止敏感或临时文件被提交到仓库。

--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,8 @@ ENABLE_CREDIT_CHECK=false
 ENABLE_STREAMING_PRECHARGE=false
 # 流式请求在无法获取 usage 时用于预估扣费的最小 token 数
 STREAMING_MIN_TOKENS=500
+# 会话模式下构建上游 messages 时最多携带的历史消息条数（不含 system；不含本次新 user 消息）。0 表示不限制。
+CHAT_CONTEXT_MAX_MESSAGES=50
 
 # 安全中间件开关：true 强制开启，false 强制关闭 先不要开启 有问题
 ENABLE_SECURITY_MIDDLEWARE=false
