feat(bridge): 添加 Bridge Gateway 镜像构建与部署支持
新增 Bridge Gateway 服务的 Docker 构建流程，包括独立的 Dockerfile 和 GitHub Actions 工作流。
同时更新 docker-compose 配置以支持本地开发和部署环境下的网关集成。

- 新增 `bridge/Dockerfile.gateway` 用于构建 Bridge Gateway 镜像
- 添加 GitHub Actions 工作流 `.github/workflows/bridge-gateway-docker-publish.yml` 实现自动发布
- 更新 `docker-compose.develop.yml` 和 `docker-compose.images.yml` 加入 bridge_gateway 服务配置
- 在 `.env.example` 中增加 Bridge Gateway 相关配置项说明
- 修正部分镜像名称引用错误（mcpproxy-api → apiproxy-api）

此外，前端聊天消息组件增强：

- 引入思维链内容的轮播展示方式及全屏查看对话框
- 增加对思维链段落拆分逻辑的支持，提升长文本可读性
- 补充国际化词条支持新的交互按钮文案
- 多个布局文件引入 BodyScrollLock 组件优化移动端滚动行为

整体提升了系统模块化能力、安全性以及用户体验。

--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,12 @@ ENABLE_API_DOCS=
 # 请使用系统 API POST /system/secret-key/generate 生成随机值并替换
 SECRET_KEY=
 
+# Bridge / MCP Tunnel Gateway（可选）
+# 后端 -> Gateway 内网调用地址（Docker Compose 下建议使用服务名）
+BRIDGE_GATEWAY_URL=http://bridge_gateway:8088
+# 保护 Gateway 内网接口 /internal/bridge/* 的共享 Token（强烈建议设置；否则对公网暴露 8088 时会有风险）
+BRIDGE_GATEWAY_INTERNAL_TOKEN=
+
 # LinuxDo OAuth2（可选，启用后可使用 LinuxDo 登录）
 LINUXDO_OAUTH_ENABLED=false
 LINUXDO_CLIENT_ID=
