--- a/.github/workflows/docker.deploy.yml
+++ b/.github/workflows/docker.deploy.yml
@@ -13,7 +13,7 @@ on:
         default: "/opt/apiproxy"
 
 env:
-  IMAGE_NAME: ${{ secrets.DOCKERHUB_NAMESPACE }}/mcpproxy-api
+  IMAGE_NAME: ${{ secrets.DOCKERHUB_NAMESPACE }}/apiproxy-api
 
 jobs:
   deploy:
