--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "apiproxy"
 version = "0.1.0"
@@ -32,6 +36,10 @@ dependencies = [
 
 [project.scripts]
 apiproxy = "main:run"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["app*", "alembic*"]
 
 [tool.ruff]
 target-version = "py312"
